src/snapshots/wgpu_pp__preprocessor__tests__comments_1.wgsl.snap
---
source: crates/wgpu_pp/src/preprocessor.rs
assertion_line: 255
expression: result.unwrap()
---

