src/snapshots/wgpu_pp__preprocessor__tests__comments_2.wgsl.snap
---
source: crates/wgpu_pp/src/preprocessor.rs
assertion_line: 255
expression: result.unwrap()
---
 fn srgb_to_linear(
    coord: vec4f
) -> vec4f {
    let linear = vec4f(
        pow(coord.r, 2.2),
        pow(coord.g, 2.2),
        pow(coord.b, 2.2),
        coord.a
    );
    return linear;
}






fn times_pi(x: f32) -> f32 {
    
    return x * (3.14159);
}
