src/snapshots/wgpu_pp__preprocessor__tests__define_3.wgsl.snap
---
source: crates/wgpu_pp/src/preprocessor.rs
assertion_line: 255
expression: result.unwrap()
---
fn times_pi(x: f32) -> f32 {
    
    return x * PI;
}
